--- a/practica_2/ejercicio10.ipynb
+++ b/practica_2/ejercicio10.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -74,26 +74,100 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inciso 1: generar estructura con todas las estadisticas juntas"
+    "Hago una lista del string de los nombres"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['Agustin', 'Yanina', 'Andrés', 'Ariadna', 'Bautista', 'CAROLINA', 'CESAR', 'David', 'Diego', 'Dolores', 'DYLAN', 'ELIANA', 'Emanuel', 'Fabián', 'Noelia', \"Francisca'\", 'FEDERICO', 'Fernanda', 'GONZALO', 'Nancy']\n"
+      "['agustin', 'yanina', 'andrés', 'ariadna', 'bautista', 'carolina', 'cesar', 'david', 'diego', 'dolores', 'dylan', 'eliana', 'emanuel', 'fabián', 'noelia', \"francisca'\", 'federico', 'fernanda', 'gonzalo', 'nancy']\n"
      ]
     }
    ],
    "source": [
     "names_list = [name.strip() for name in names.lower().split(\",\")]\n",
-    "print(names_list)\n"
+    "print(names_list)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Importo los modulos"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import modules.functions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inciso 1: generar estructura con todas las estadisticas juntas"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'modules' has no attribute 'structure'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m players_stats \u001b[38;5;241m=\u001b[39m \u001b[43mmodules\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstructure\u001b[49m(names_list,goals,goals_avoided,assists)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(players_stats)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(players_stats))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'modules' has no attribute 'structure'"
+     ]
+    }
+   ],
+   "source": [
+    "players_stats = modules.structure(names_list,goals,goals_avoided,assists)\n",
+    "print(players_stats)\n",
+    "print(type(players_stats))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inciso 2: obtener nombre y goles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "string indices must be integers, not 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m goal_scorer \u001b[38;5;241m=\u001b[39m \u001b[43mmodules\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_goal_scorer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplayers_stats\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEl goleador/goleadora del equipo es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgoal_scorer[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m con una cantidad de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgoal_scorer[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m goles\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "File \u001b[1;32mc:\\Users\\ivan_\\Documents\\A Facultad\\repositorios\\python_facultad\\practica_2\\modules\\__init__.py:12\u001b[0m, in \u001b[0;36mget_goal_scorer\u001b[1;34m(players)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_goal_scorer\u001b[39m (players):\n\u001b[1;32m---> 12\u001b[0m     name, goals\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mplayers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgoles_a_favor\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m name, goals\n",
+      "File \u001b[1;32mc:\\Users\\ivan_\\Documents\\A Facultad\\repositorios\\python_facultad\\practica_2\\modules\\__init__.py:12\u001b[0m, in \u001b[0;36mget_goal_scorer.<locals>.<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_goal_scorer\u001b[39m (players):\n\u001b[1;32m---> 12\u001b[0m     name, goals\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(players, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgoles_a_favor\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m name, goals\n",
+      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+     ]
+    }
+   ],
+   "source": []
   }
  ],
  "metadata": {
