--- a/practica_2/ejercicio10.ipynb
+++ b/practica_2/ejercicio10.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -104,11 +104,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import modules.functions"
+    "from modules.functions import *\n"
    ]
   },
   {
@@ -120,25 +120,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
-     "ename": "AttributeError",
-     "evalue": "module 'modules' has no attribute 'structure'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[14], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m players_stats \u001b[38;5;241m=\u001b[39m \u001b[43mmodules\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mstructure\u001b[49m(names_list,goals,goals_avoided,assists)\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(players_stats)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;28mtype\u001b[39m(players_stats))\n",
-      "\u001b[1;31mAttributeError\u001b[0m: module 'modules' has no attribute 'structure'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'agustin': {'goles_a_favor': 0, 'goles_evitados': 0, 'asistencias': 0}, 'yanina': {'goles_a_favor': 10, 'goles_evitados': 2, 'asistencias': 5}, 'andrés': {'goles_a_favor': 4, 'goles_evitados': 0, 'asistencias': 1}, 'ariadna': {'goles_a_favor': 0, 'goles_evitados': 0, 'asistencias': 0}, 'bautista': {'goles_a_favor': 5, 'goles_evitados': 5, 'asistencias': 5}, 'carolina': {'goles_a_favor': 14, 'goles_evitados': 2, 'asistencias': 2}, 'cesar': {'goles_a_favor': 0, 'goles_evitados': 0, 'asistencias': 0}, 'david': {'goles_a_favor': 0, 'goles_evitados': 0, 'asistencias': 0}, 'diego': {'goles_a_favor': 7, 'goles_evitados': 1, 'asistencias': 1}, 'dolores': {'goles_a_favor': 2, 'goles_evitados': 2, 'asistencias': 2}, 'dylan': {'goles_a_favor': 1, 'goles_evitados': 0, 'asistencias': 1}, 'eliana': {'goles_a_favor': 1, 'goles_evitados': 5, 'asistencias': 5}, 'emanuel': {'goles_a_favor': 1, 'goles_evitados': 5, 'asistencias': 5}, 'fabián': {'goles_a_favor': 5, 'goles_evitados': 0, 'asistencias': 0}, 'noelia': {'goles_a_favor': 6, 'goles_evitados': 1, 'asistencias': 1}, \"francisca'\": {'goles_a_favor': 1, 'goles_evitados': 0, 'asistencias': 0}, 'federico': {'goles_a_favor': 1, 'goles_evitados': 2, 'asistencias': 2}, 'fernanda': {'goles_a_favor': 2, 'goles_evitados': 3, 'asistencias': 3}, 'gonzalo': {'goles_a_favor': 0, 'goles_evitados': 0, 'asistencias': 1}, 'nancy': {'goles_a_favor': 11, 'goles_evitados': 0, 'asistencias': 0}}\n"
      ]
     }
    ],
    "source": [
-    "players_stats = modules.structure(names_list,goals,goals_avoided,assists)\n",
-    "print(players_stats)\n",
-    "print(type(players_stats))"
+    "players_stats = get_structure(names_list,goals,goals_avoided,assists)\n",
+    "print(players_stats)"
    ]
   },
   {
@@ -150,24 +145,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "string indices must be integers, not 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[22], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m goal_scorer \u001b[38;5;241m=\u001b[39m \u001b[43mmodules\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_goal_scorer\u001b[49m\u001b[43m(\u001b[49m\u001b[43mplayers_stats\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mEl goleador/goleadora del equipo es \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgoal_scorer[\u001b[38;5;241m0\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m con una cantidad de \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mgoal_scorer[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m goles\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "File \u001b[1;32mc:\\Users\\ivan_\\Documents\\A Facultad\\repositorios\\python_facultad\\practica_2\\modules\\__init__.py:12\u001b[0m, in \u001b[0;36mget_goal_scorer\u001b[1;34m(players)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_goal_scorer\u001b[39m (players):\n\u001b[1;32m---> 12\u001b[0m     name, goals\u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mmax\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mplayers\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mkey\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mlambda\u001b[39;49;00m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m:\u001b[49m\u001b[43m \u001b[49m\u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgoles_a_favor\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m name, goals\n",
-      "File \u001b[1;32mc:\\Users\\ivan_\\Documents\\A Facultad\\repositorios\\python_facultad\\practica_2\\modules\\__init__.py:12\u001b[0m, in \u001b[0;36mget_goal_scorer.<locals>.<lambda>\u001b[1;34m(x)\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21mget_goal_scorer\u001b[39m (players):\n\u001b[1;32m---> 12\u001b[0m     name, goals\u001b[38;5;241m=\u001b[39m \u001b[38;5;28mmax\u001b[39m(players, key\u001b[38;5;241m=\u001b[39m\u001b[38;5;28;01mlambda\u001b[39;00m x: \u001b[43mx\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mgoles_a_favor\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[0;32m     13\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m name, goals\n",
-      "\u001b[1;31mTypeError\u001b[0m: string indices must be integers, not 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El máximo goleador es: Carolina con 14 goles.\n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "goal_scorer_name, goals_scored = get_goal_scorer(players_stats)\n",
+    "print(\"El máximo goleador es:\", goal_scorer_name.capitalize(), \"con\", goals_scored, \"goles.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inciso 3: obtener el jugador mas influyente"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El jugador mas influente es: Carolina\n"
+     ]
+    }
+   ],
+   "source": [
+    "influential_player = get_influential_player (players_stats)\n",
+    "print(\"El jugador mas influente es:\",influential_player.capitalize())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inciso 4: obtener promedio de goles por partido del equipo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El promedio de gol por partido del equipo es: 2.84\n"
+     ]
+    }
+   ],
+   "source": [
+    "team_goal_average = get_team_goal_average(players_stats)\n",
+    "print(\"El promedio de gol por partido del equipo es:\",team_goal_average)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Inciso 5: obtener promedio de goles por partido del goleador"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "goal_scorer_goal_average = get_goal_scorer_goal_average(players_stats)\n",
+    "print(\"El promedio de gol partido de la goleadora es:\",goal_scorer_goal_average)"
+   ]
   }
  ],
  "metadata": {
