--- a/practica_2/ejercicio10.ipynb
+++ b/practica_2/ejercicio10.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +91,7 @@
     }
    ],
    "source": [
-    "names_list = [name.strip() for name in names.lower().split(\",\")]\n",
+    "names_list = [name for name in names.lower().split(\",\")]\n",
     "print(names_list)"
    ]
   },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -140,12 +140,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inciso 2: obtener nombre y goles"
+    "Inciso 2: obtener el goleador del equipo"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -165,12 +165,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inciso 3: obtener el jugador mas influyente"
+    "Inciso 3: obtener el jugador mas influyente del equipo\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -220,9 +220,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "El promedio de gol partido de la goleadora es: 0.56\n"
+     ]
+    }
+   ],
    "source": [
     "goal_scorer_goal_average = get_goal_scorer_goal_average(players_stats)\n",
     "print(\"El promedio de gol partido de la goleadora es:\",goal_scorer_goal_average)"
